2005-01-22  Bud Davis  <bdavis9659@comcast.net>

PR fortran/19313
        * trans-io.c (gfc_trans_inquire): Added code to support
        pad.

        PR fortran/19313
        * gfortan.dg/inquire_6.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94110 138bc75d-0d04-0410-961f-82ee72b054a4